[gd_scene load_steps=2 format=3 uid="uid://ci4wetu8wxsa1"]

[ext_resource type="Script" uid="uid://d1kr2rlmi5mmt" path="res://tests/EnemySystem_Isolated.gd" id="1_enemysystem"]

[node name="EnemySystem_Isolated" type="Node2D"]
script = ExtResource("1_enemysystem")

[node name="EnemyMultiMesh" type="MultiMeshInstance2D" parent="."]

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="HUD" type="Control" parent="UILayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="InfoLabel" type="Label" parent="UILayer/HUD"]
layout_mode = 0
anchor_right = 0.5
anchor_bottom = 0.6
text = "Enemy System Test
Space: Spawn 300 enemy grid
R: Clear all enemies
1-4: Spawn specific types"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(400, 300)
zoom = Vector2(0.8, 0.8)
